Modification du pom.xml pour activer le coverage